--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,16 @@
 <!doctype html>
 <html>
-    <head><title>Ride Request</title></head>
+    <center>
+    <head><title>Flightmate</title></head>
     <body>
         <h1>Submit a Ride Request!</h1>
         <form method = "post">
-            Name:<input type="text" name = "name"><br>
-            Email:<input type="email" name = "email"><br>
-            Airport(e.g. JFK):<input type="text" name = "airport"><br>
-            Datetime (YYYY/MM/DD HH:MM):<input type="text" name = "datetime"><br>
-            <input type="submit" value="Submit">
+            Name: <input type="text" name = "name"><br>
+            <br>Email: <input type="email" name = "email"><br>
+            <br>Airport(e.g. JFK): <input type="text" name = "airport"><br>
+            <br>Datetime (YYYY/MM/DD HH:MM): <input type="text" name = "datetime"><br>
+            <br><input type="submit" value="Submit">
         </form>
     </body>
+    </center>
 </html>
