--- a/templates/index.html
+++ b/templates/index.html
@@ -5,11 +5,19 @@
     <body>
         <h1>Submit a Ride Request!</h1>
         <form method = "post">
-            Name: <input type="text" name = "name"><br>
-            <br>Email: <input type="email" name = "email"><br>
-            <br>Airport(e.g. JFK): <input type="text" name = "airport"><br>
-            <br>Datetime (YYYY/MM/DD HH:MM): <input type="text" name = "datetime"><br>
-            <br><input type="submit" value="Submit">
+            Name: <input type="text" name = "name"><br><br>
+            Email: <input type="email" name = "email"><br><br>
+            
+            <label for ="airport">Choose your destination:</label>
+            <select id="airport" name="airport">
+                <option value="JFK">JFK</option>
+                <option value="LGA">LGA</option> 
+                <option value="EWR">EWR</option>
+                <option value="LAX">LAX</option>
+            </select><br><br>
+    
+            Datetime (YYYY/MM/DD HH:MM): <input type="text" name = "datetime"><br><br>
+            <input type="submit" value="Submit">
         </form>
     </body>
     </center>
